[project]
name = "fastapi-url-shortener"
version = "0.1.0"
description = "FastAPI URL Shortener"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "redis[hiredis]>=6.4.0",
    "typer>=0.17.3",
]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
]


[tool.mypy]
strict = true
plugins=[
    "pydantic.mypy",
]